edge/jekyll/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jekyll-deployment
  namespace: jekyll
spec:
  replicas: 3
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: jekyll
  template:
    metadata:
      labels:
        app: jekyll
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: jekyll
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: jekyll-container
          image: montkim9/jekyll:a06ffa
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 5
          ports:
            - containerPort: 80
